tree-optimization/95856 fix vect_stmt_dominates_stmt_p at BB region boundary

The following adjusts vect_stmt_dominates_stmt_p to honor out-of-region
stmts we run into which have UID -1u.

2020-06-24  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/95856
	* tree-vectorizer.c (vect_stmt_dominates_stmt_p): Honor
	region marker -1u.

	* gcc.dg/vect/pr95856.c: New testcase.